# TDAMM-Models

./: MANIFEST.in  README.rst  setup.cfg  setup.py  tox.ini
docs/: conf.py  index.rst
docs/tdamm_models/: index.rst
licenses/: APACHE2.rst  BSD2.rst  GPLv3.rst
notebooks/: knova-heat-example.ipynb  surrogate_kne_model_prediction_tutorial.ipynb
tdamm_models/: conftest.py
tdamm_models/example_subpkg/: setup_package.py
