[metadata]
name = tdamm_models
author = John Baker, Bernard Kelly, Scott Noble, Jeremy Schnittman, Leo Singer
author_email = scott.c.noble@nasa.gov
license = Other
license_files = licenses/LICENSE.rst
url = http://docs.astropy.org/projects/package-template/
description =  Catalogue of and tool for using theoretical models of sources relevant to time-domain, multi-wavelength, multi-messenger astrophysics and astronomy. 
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = False
github_project = TDAMM-Models/TDAMM-Models

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
install_requires =
    astropy

[options.entry_points]
console_scripts =
    astropy-package-template-example = packagename.example_mod:main

[options.extras_require]
test =
    pytest-astropy
docs =
    sphinx-astropy

[options.package_data]
tdamm_models = data/*

[tool:pytest]
testpaths = "tdamm_models" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
    tdamm_models/_astropy_init*
    tdamm_models/conftest.py
    tdamm_models/*setup_package*
    tdamm_models/tests/*
    tdamm_models/*/tests/*
    tdamm_models/extern/*
    tdamm_models/version*
    */tdamm_models/_astropy_init*
    */tdamm_models/conftest.py
    */tdamm_models/*setup_package*
    */tdamm_models/tests/*
    */tdamm_models/*/tests/*
    */tdamm_models/extern/*
    */tdamm_models/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
